# glowsuit

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md  fixme  glowsuit_env.yml  glowsuit_teaser2.mid  notes  suit.json  suit_xbee_ciguration.xpro  teaser_choreo.mid  test.mid
arduino/: CMakeLists.txt  QMetaType  README.md
arduino-cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
arduino-cmake/Arduino/System/: BoardBuildTargets.cmake
arduino-cmake/command_station/: Makefile  cmake_install.cmake
arduino/suits/: main.cpp  scoped_suit_main.cpp  scoped_suit_main.h  suit_1.cpp  suit_2.cpp  suit_3.cpp  suit_4.cpp  suit_5.cpp  suit_6.cpp  suit_choreo.h  suit_command.cpp  suit_command.h  suit_common.cpp  suit_common.h  suit_main.cpp  suit_program.cpp  suit_program.h
arduino/test_time/: test_time.ino
command_station/: CMakeLists.txt  CMakeSettings.json  README.md  suit.json
command_station/command_station/: Makefile  command_station.py  command_station.ui  command_station_ui.py  condense_choreo.py  pseudo_tty.py  tx_xbee.py  visualizer.py
command_station/glowsuit/: command_station.py  get_ni_xbee.py  keyboard_control.py  rx_xbee.py
command_station/include/: all_suits_choreo.h  common.h  live_midi_input.h  main_widget.h  my_main_window.h  suit_dispatcher.h  suit_worker.h  visualizer.h
command_station/include/audio/: play_music.h
command_station/include/midi/: MidiFile.h  live_midi_input.h  midi_common.h  midi_file_player.h  midi_input.h
command_station/include/midi/linux/: midi_input_linux.h
command_station/include/midi/osx/: midi_input_osx.h
command_station/include/midi/win/: midi_input_win.h
command_station/include/mock_arduino/: Arduino.h  XBee.h
command_station/rc/: command_station.qrc  style.qss
command_station/src/: Arduino.cpp  XBee.cpp  all_suits_choreo.cpp  command_station.cpp  common.cpp  live_midi_input.cpp  main_widget.cpp  mainwidget.ui  mainwindow.ui  midi_in_sample.cpp  my_main_window.cpp  suit_dispatcher.cpp  suit_worker.cpp  visualizer.cpp
command_station/src/audio/: play_music-win.cpp  play_music.cpp
command_station/src/midi/: MidiFile.cpp  RtMidi.cpp  live_midi_input.cpp  midi_file_player.cpp  midi_input.cpp  midi_input_win.cpp
command_station/src/midi/linux/: midi_input_linux.cpp
command_station/src/midi/osx/: midi_input_osx.cpp
command_station/src/midi/win/: midi_input_win.cpp
command_station/src/serial/: serial.cpp
command_station/src/serial/impl/: unix.cpp
command_station/test/: test.cpp
cpp/: CMakeLists.txt  CMakeSettings.json  byteset.cpp  command_station.qrc  conda-win-toolchain.cmake  main.cpp  sound_playback.c
cpp/enc_temp_folder/7dea9aa3682de70c8fc1ef31ff0de5f/: main_ui.cpp
cpp/include/: byteset.h  common.h  main_ui.h  visualizer.h
cpp/include/audio/: play_music.h
cpp/include/midi/: MidiEvent.h  MidiEventList.h  midi_input.h
cpp/midi/: Binasc.cpp  MidiEvent.cpp  MidiEventList.cpp  MidiMessage.cpp
cpp/src/: command_station.cpp  main.cpp  main_ui.cpp  mainwindow.ui  test_win_audio.cpp  visualizer.cpp
cpp/src/audio/: play_music-win.cpp  play_music.cpp
cpp/src/midi/: midi_input_win.cpp
glowsuit/: keyboard_control.py
scripts/: midi_to_code.py  rx_xbee.py  tx_xbee.py
suits/new_suit/: new_suit.h  new_suit.ino  suit_1.h  suit_2.h  suit_3.h  suit_4.h  suit_5.h  suit_6.h
suits/suit/: suit.ino
suits/suit2/: suit2.ino  suit_3.h  suit_4.h  suit_5.h
suits/test_xbee_soft_serial/: test_xbee_soft_serial.ino
